<resources>
    <string name="app_name">cartilla Animal</string>
    <string name="comp_perfil">Completar Perfil</string>
    <string name="title">Cartilla de Vacunación Animal</string>
    <string name="nombre">Nombre completo</string>
    <string name="nombre_mascota">Nombre</string>
    <string name="ej_nombre">Nombres A. Paterno A. Materno</string>
    <string name="nombre_hint">Ingrese su nombre</string>
    <string name="direccion_hint">Ingrese su direccion</string>
    <string name="direccion">Direccion</string>
    <string name="telefono_hint">Número telefónico</string>
    <string name="nombreMascota_hint">Nombre de su mascota</string>
    <string name="correo">Correo electrónico</string>
    <string name="contra">Contraseña</string>
    <string name="conf_contra">Confirmar Contraseña</string>
    <string name="contra_hint">*******</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="olvido_Contra">¿Olvidó su contraseña?</string>
    <string name="telefono">+52 | xxx-xxx-xxxx</string>
    <string name="ej_direccion">Ejemplo Avenida Insurgentes</string>
    <string name="tipo_suscripcion">Tipo de suscripción:</string>
    <string name="suscripcion_gratuita">Gratuita</string>
    <string name="suscripcion_VIP">VIP</string>
    <string name="hacerce_vip">Hacerse VIP</string>
    <string name="titulo_mascotas">Mascotas</string>
    <string name="nombre_mascotas">Firulais</string>
    <string name="tipo_mascotas">Tipo de Mascota</string>
    <string name="edadMascotas">Edad</string>
    <string name="edadMascotas_hint">2 meses</string>
    <string name="peso">Peso</string>
    <string name="peso_hint">2 Kg</string>
    <string name="omitir">Omitir</string>
    <string name="copy">2023 Copyright Todos los derechos reservados</string>

    <string name="bienvenido">Bienvenid@,</string>
    <string name="mensaje">¡Cartilla de Vacunación digital, Cuidando de tus mascotas!</string>
    <string name="info">Información de Vacunas</string>
    <string name="recomendaciones">Recomendaciones de cuidado</string>
    <string name="acerca_de">Acerca de Nosotros</string>


    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>

    <string name="vacunas">Vacunas</string>
    <string name="mensaje2">Seguimiento de vacunación para sus mascotas</string>
    <string name="btnCartilla">Ver Cartilla</string>


    <string name="Cartilla">Cartilla</string>
    <string name="recordatorio">Recordatorio</string>
    <string name="periodo">Periodo</string>
    <string name="estado">Estado</string>
    <string name="fecha">Fecha</string>
    <string name="vacuna">Vacuna(s)</string>
    <string name="anual">Anual</string>

    <!-- Perro -->
    <string name="p1p">6 - 8 Semanas</string>
    <string name="v1p">Polivalente</string>
    <string name="p2p">9 - 11 Semanas</string>
    <string name="v2p">Polivalente 2</string>
    <string name="p3p">12 - 14 Semanas</string>
    <string name="v3p">Rabia</string>
    <!-- gato -->
    <string name="p1g">8 Semanas</string>
    <string name="p2g">12 Semanas</string>
    <string name="p3g">16 Semanas</string>
    <string name="p4g">19 Semanas</string>
    <string name="p5g">Anuall</string>
    <!-- conejo -->
    <string name="p1c">6 - 8 Semanas</string>
    <string name="p2c">9 - 11 Semanas</string>
    <string name="p3c">12 - 14 Semanas</string>


    <string name="establecer">Establecer</string>


    <string name="rec_1">Proporcionar una dieta equilibrada y adecuada para la especie y la edad de la mascota.</string>
    <string name="rec_2">Asegurarse de que la mascota tenga acceso a agua fresca y limpia en todo momento.</string>
    <string name="rec_3">Programar visitas regulares al veterinario para chequeos de salud y vacunaciones.</string>
    <string name="rec_4">Mantener a la mascota limpia y bien arreglada, lo que puede incluir baños regulares, cepillado y corte de uñas.</string>
    <string name="rec_5">Proporcionar suficiente ejercicio y estimulación mental para evitar el aburrimiento y el comportamiento destructivo.</string>
    <string name="rec_6">Asegurarse de que la mascota tenga un lugar seguro y cómodo para dormir.</string>
    <string name="rec_7">Mantener la casa y el área donde la mascota vive limpia y libre de peligros.</string>
    <string name="rec_8">Proporcionar juguetes y actividades adecuados para su especie y edad para mantener a la mascota estimulada y feliz.</string>
    <string name="rec_9">Brindar entrenamiento y socialización adecuados para ayudar a la mascota a adaptarse a su entorno.</string>
    <string name="rec_10">Asegurarse de que la mascota tenga un collar y una identificación en todo momento en caso de que se pierda.</string>


    <string name="Facebook">Facebook</string>
    <string name="F_M">Mangel Martinez</string>
    <string name="F_A">Alfonso Vázquez</string>
    <string name="Instagram">Facebook</string>
    <string name="I_M">Mangel_Martinez</string>
    <string name="I_A">Alfonsovg1</string>
    <string name="Linkedin">Facebook</string>
    <string name="L_M">Miguel Angel FM</string>
    <string name="L_A">Alfonso VG</string>



</resources>
