<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Recomendaciones">

    <TextView
        android:id="@+id/titulo_recomendaciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recomendaciones"
        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="623dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_recomendaciones">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_1" />


            <TextView
                android:id="@+id/textView32"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_3" />


            <TextView
                android:id="@+id/textView28"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_4" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <TextView
                android:id="@+id/textView25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_5" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <TextView
                android:id="@+id/textView26"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_7" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_8" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:divider="@drawable/divider"
            android:showDividers="middle">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_9" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/borde"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/rec_10" />
        </TableRow>
    </TableLayout>

    <ImageButton
        android:id="@+id/btnAtras"
        android:layout_width="42dp"
        android:layout_height="43dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:src="@drawable/ic_atras"
        android:textColor="@android:color/white"
        app:backgroundTint="@color/C_check"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.973" />



</androidx.constraintlayout.widget.ConstraintLayout>