<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lbl_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="385dp"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/mensaje"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <Button
        android:id="@+id/btnMascotas"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_mascota"
        android:text="@string/titulo_mascotas"
        app:layout_constraintBottom_toTopOf="@+id/btnInfoVacunas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.881" />

    <Button
        android:id="@+id/btnInfoVacunas"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:drawableLeft="@drawable/ic_vacunas"
        android:text="@string/info"
        app:layout_constraintBottom_toTopOf="@+id/btnRecomendaciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRecomendaciones"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:drawableLeft="@drawable/ic_recomendaciones"
        android:text="@string/recomendaciones"
        app:layout_constraintBottom_toTopOf="@+id/btnAcercaDe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAcercaDe"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:drawableLeft="@drawable/ic_info"
        android:text="@string/acerca_de"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="338dp"
        android:layout_height="169dp"
        app:layout_constraintBottom_toTopOf="@+id/btnMascotas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:srcCompat="@mipmap/ic_logo_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>